<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".TelaPupfeeder">

    <Button
        android:id="@+id/buttonRacoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_weight="1"
        android:drawableLeft="@mipmap/ic_racao_foreground"
        android:text="@string/activity_tela_pupfeeder_racoes" />

    <Button
        android:id="@+id/buttonAnimais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_weight="1"
        android:drawableLeft="@mipmap/ic_animais_foreground"
        android:text="@string/activity_tela_pupfeeder_animais" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_weight="1"
        android:drawableLeft="@mipmap/ic_alimentadores_foreground"
        android:text="@string/activity_tela_pupfeeder_alimentador" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_weight="1"
        android:drawableLeft="@mipmap/ic_agendamento_foreground"
        android:text="@string/activity_tela_pupfeeder_agendamento" />
</LinearLayout>