<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".TelaCadastroRacoes">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_tela_cadastro_racoes_marca" />

    <EditText
        android:id="@+id/editTextTelaCadastroRacaoMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activity_tela_cadastro_racoes_quantidade" />

    <EditText
        android:id="@+id/editTextTelaCadstroRacaoQuantidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activity_tela_cadastro_racoes_tipo" />

    <Spinner
        android:id="@+id/spinnerTelaCadastroRacaoTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/activity_tela_cadastro_racoes_tipo_lista" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activity_tela_cadastro_racoes_porte" />

    <Spinner
        android:id="@+id/spinnerTelaCadastroRacaoPorte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/activity_tela_cadastro_racoes_porte_lista" />

    <Button
        android:id="@+id/buttonTelaCadastroRacaoSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="CriarRacao"
        android:text="Button" />

</LinearLayout>